v6.3.0/_sources/generated/pcdsdevices.atm.TM1K4.rst.txt
pcdsdevices.atm.TM1K4
=====================

.. currentmodule:: pcdsdevices.atm

.. autoclass:: TM1K4

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - target
          - :class:`~pcdsdevices.atm.TM1K4Target`
          - ``:MMS:STATE``
          - Control of the diagnostic stack via saved positions.
          - hinted
          - Inherited from :class:`~pcdsdevices.atm.ArrivalTimeMonitor`
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:Y``
          - Direct control of the diagnostic stack motor.
          - normal
          - Inherited from :class:`~pcdsdevices.atm.ArrivalTimeMonitor`
    
        * - x_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxis`
          - ``:MMS:X``
          - X position of target stack for alignment
          - normal
          - Inherited from :class:`~pcdsdevices.atm.ArrivalTimeMonitor`
    
        * - thermocouple1
          - :class:`~pcdsdevices.sensors.TwinCATTempSensor`
          - ``:STC:01``
          - First thermocouple.
          - normal
          - Inherited from :class:`~pcdsdevices.atm.ArrivalTimeMonitor`
    

    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: transmission
    
    